--- a/css/styles.css
+++ b/css/styles.css
@@ -86,9 +86,10 @@ body{
     font-family: "Bad Script"; 
 }
 
-.body-words{
-    font: 20px system-ui;
-    margin: 3px;
+.table-skills{
+    text-align: left;
+    font-size: 20px;
+    font-family: "Raleway";
 }
 
 .emphasized-words{
@@ -103,4 +104,33 @@ body{
     text-align: center;
     margin:0;
     padding:0;
+}
+
+.about-me{
+    display: block;
+}
+
+.subject{
+    font-family: "Flamenco";
+    font-size: 40px;
+    padding: 15px;
+    margin-top: 5%;
+}
+
+.subheading{
+    font-family: "Flamenco";
+    font-size: 25px;
+    padding-left: 40px;
+}
+
+.inside-table{
+    vertical-align: top;
+    padding:0;
+    margin:0;
+}
+
+.body-words{
+    font-size: 20px;
+    font-family: "Raleway";
+    margin: 15px;
 }
