--- a/css/styles.css
+++ b/css/styles.css
@@ -66,9 +66,10 @@ body{
     height:35px;
 }
 
-.resume-section-content{
+.resume-section{
     margin-left: 10px;
     margin-right: 10px;
+    background-color:rgba(95, 158, 160, 0.582);
 }
 
 .i-love-to-code{
@@ -144,7 +145,7 @@ body{
 }
 
 td{
-    padding:15px;
+    padding:10px;
 }
 
 .star{
@@ -152,48 +153,38 @@ td{
 }
 
 .project-img{
-    width:350px;
+    flex:1;
 }
 
-.project-img-tall{
-    height:230px;
-}
-
-.project-showcase{
-    margin-left:20%;
-    align-items: center;
-    text-align: center;
-}
 
 .project-table{
-    text-align: left;
-    margin-left: auto;
-    margin-right: auto;
+    display: flex;
+    align-items: center;
     font-size: 20px;
     font-family: "Raleway";
     margin-bottom: 3%;
     background-color:rgba(95, 158, 160, 0.582);
 }
 
+.project-intro{
+    flex:2;
+}
+
 .project-description{
     font-family: "Raleway";
     font-weight: 100;
     font-size: 17px;
-    width:100%;
 }
 
 .language{
     font-family: "Bad Script";
     font-size:18px;
     text-align: right;
-    margin-left:40%;
 }
 
 .project-title{
     font-family: "Flamenco";
     font-size: 30px;
-    margin-top: 5%;
-    margin-bottom: 3%;
     text-align: left;
 }
 
@@ -252,13 +243,14 @@ textarea{
 }
 
 .grid-container{
-    display: inline-grid;
-    column-gap: 2%;
-    row-gap: 2%;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    align-items: center;
-    margin-bottom: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.grid-item{
+    flex: 0 0 33%;
 }
 
 .design{
